--- a/pkg/features/embedded/grub-config/etc/elemental/grub.cfg
+++ b/pkg/features/embedded/grub-config/etc/elemental/grub.cfg
@@ -65,22 +65,25 @@ function set_loopdevice {
 
 ## Sources bootargs from the current volume
 function source_bootargs {
-  source (${volume})/etc/cos/bootargs.cfg
-  source (${volume})/etc/elemental/bootargs.cfg
+  source (${volume})/${root_subpath}etc/cos/bootargs.cfg
+  source (${volume})/${root_subpath}etc/elemental/bootargs.cfg
 }
 
 ## Defines the volume and image to boot from for active or passive boots
 function set_volume {
   if [ "${snapshotter}" == "btrfs" ]; then
-    set btrfs_relative_path="y"
     set volume="${root}"
     if [ -n "${1}" ]; then
       set img="@/.snapshots/${1}/snapshot"
-      btrfs-mount-subvol ($root) / ${img}
+    else
+      set img="@/.snapshots/${active_snap}/snapshot"
     fi
+    set root_subpath="${img}/"
   elif [ -z "${1}" ]; then
+    set root_subpath=""
     set_loopdevice /.snapshots/active
   else
+    set root_subpath=""
     set img="/.snapshots/${1}/snapshot.img"
     set_loopdevice ${img}
   fi
@@ -88,7 +91,7 @@ function set_volume {
 
 menuentry "${display_name}" --id active {
   set mode=active
-  search --no-floppy --label --set=root ${state_label}
+  search --no-floppy --set root --label ${state_label}
   set_volume
   source_bootargs
   linux (${volume})${kernel} ${kernelcmd} ${extra_cmdline} ${extra_active_cmdline}
@@ -98,7 +101,7 @@ menuentry "${display_name}" --id active {
 for passive_snap in ${passive_snaps}; do
   menuentry "${display_name} (snapshot ${passive_snap})" --id passive${passive_snap} ${passive_snap} {
     set mode=passive
-    search --no-floppy --label --set=root ${state_label}
+    search --no-floppy --set root --label ${state_label}
     set_volume ${2}
     source_bootargs
     linux (${volume})${kernel} ${kernelcmd} ${extra_cmdline} ${extra_passive_cmdline}
@@ -108,7 +111,7 @@ done
 
 menuentry "${display_name} recovery" --id recovery {
   set mode=recovery
-  search --no-floppy --label --set=root ${recovery_label}
+  search --no-floppy --set root --label ${recovery_label}
 
   # Check the presence of the image and fallback to legacy path if not present
   set img=/boot/recovery.img
