--- a/pkg/features/embedded/grub-default-bootargs/etc/elemental/bootargs.cfg
+++ b/pkg/features/embedded/grub-default-bootargs/etc/elemental/bootargs.cfg
@@ -23,5 +23,5 @@ else
   set kernelcmd="console=tty1 console=ttyS0 root=LABEL=${state_label} ${img_arg} ${snap_arg} elemental.mode=${mode} elemental.oemlabel=${oem_label} panic=5 security=selinux fsck.mode=force fsck.repair=yes"
 fi
 
-set kernel=/boot/vmlinuz
-set initramfs=/boot/initrd
+set kernel=/${root_subpath}boot/vmlinuz
+set initramfs=/${root_subpath}boot/initrd
