Fix regression tests.
orange now boots on btrfs snapshotter.
- grub configuration can now work without default subvolume
- moved kernel link relativize call

--- a/pkg/features/embedded/grub-config/etc/elemental/grub.cfg
+++ b/pkg/features/embedded/grub-config/etc/elemental/grub.cfg
@@ -72,13 +72,23 @@ function source_bootargs {
 ## Defines the volume and image to boot from for active or passive boots
 function set_volume {
   if [ "${snapshotter}" == "btrfs" ]; then
-    set volume="${root}"
-    if [ -n "${1}" ]; then
-      set img="@/.snapshots/${1}/snapshot"
+    if [ -d "@/.snapshots/${active_snap}/snapshot" ]; then
+      set volume="${root}"
+      if [ -n "${1}" ]; then
+        set img="@/.snapshots/${1}/snapshot"
+      else
+        set img="@/.snapshots/${active_snap}/snapshot"
+      fi
+      set root_subpath="${img}/"
     else
-      set img="@/.snapshots/${active_snap}/snapshot"
+      set btrfs_relative_path="y"
+      set volume="${root}"
+      set root_subpath=""
+      if [ -n "${1}" ]; then
+        set img="@/.snapshots/${1}/snapshot"
+        btrfs-mount-subvol ($root) / ${img}
+      fi
     fi
-    set root_subpath="${img}/"
   elif [ -z "${1}" ]; then
     set root_subpath=""
     set_loopdevice /.snapshots/active
