Initial success with orange flavor without snapper:
- added two configuration booleans for btrfs
- elemental upgrade is now working on orange flavor
- orange iso builds and install in btrfs

Still have to implement the 'max-snaps' when snapper is disabled.
Try to make snapper configuration work on orange too

btrfs configuration:
- disable-snapper: disable snapper usage and rely only over btrfsprogs. tested on orange and green
- disable-default-subvolume: disable subvolume get/set-default (as it is an incompat feature of btrfs). When default subvolume usage is disabled, a symlink is used in the state dir to find active snapshot.

It is not possible to disable default subvolume usage while using snapper (an error is returned).

TODO:
- try to rework snapper based snapshotter
- implements 'max-snaps'

--- a/examples/orange/Dockerfile
+++ b/examples/orange/Dockerfile
@@ -53,8 +53,8 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-ins
   podman \
   btrfs-progs \
   btrfsmaintenance \
-  snapper \
-  xz-utils
+  xz-utils && \
+  apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Hack to prevent systemd-firstboot failures while setting keymap, this is known
 # Debian issue (T_T) https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=790955
