orange flavor can now use either snapper or pure btrfs snapshotter,
need to fix test-cli and more checks for error handling.
install, reset and upgrade is tested and working on green/orange

Changelog:
- reintroduced state directories variables, it makes code simpler,
- changed grub configuration. It should allow downgrades,
- snapper configuration is now created using a chroot in the snapshot,
- snapper initial snapshot bootstrap has changed (rely on snapper chroot initial snapshot creation),
- removed snapper xml code (handled by snapper itself),
- fixed old snapshot deletion,
- added snapper wrappers to run inside chroot or in current context,
- default btrfs subvolume is always updated

--- a/pkg/features/embedded/grub-config/etc/elemental/grub.cfg
+++ b/pkg/features/embedded/grub-config/etc/elemental/grub.cfg
@@ -72,8 +72,11 @@ function source_bootargs {
 ## Defines the volume and image to boot from for active or passive boots
 function set_volume {
   if [ "${snapshotter}" == "btrfs" ]; then
+    # apply btrfs default subvolume if applicable
+    set btrfs_relative_path="y"
+    set volume="${root}"
+    # check if active snap is defined with default top level volume
     if [ -d "@/.snapshots/${active_snap}/snapshot" ]; then
-      set volume="${root}"
       if [ -n "${1}" ]; then
         set img="@/.snapshots/${1}/snapshot"
       else
@@ -81,8 +84,7 @@ function set_volume {
       fi
       set root_subpath="${img}/"
     else
-      set btrfs_relative_path="y"
-      set volume="${root}"
+      # if not in top level use subvolume based mounts 
       set root_subpath=""
       if [ -n "${1}" ]; then
         set img="@/.snapshots/${1}/snapshot"
